Fix: nav links visible even when closing dropdown on sm devices

--- a/css/mixins.scss
+++ b/css/mixins.scss
@@ -13,9 +13,11 @@
         height: 1px;
         width: 0;
         transition: width 300ms;
+        color: palette.$clr-white;
     }
 
     &:hover:after {
         width: 100%;
+        color: palette.$clr-white;
     }
 }
